--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script defer src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
+    <script defer src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
